# AutoKM

./: .gitignore  README.md  index.html  package-lock.json
.github/workflows/: build-firmware.yml  main.yml
src/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
src/main/: CMakeLists.txt  auto_km_main.c  auto_kv_main.c  esp_hid_gap.c  esp_hid_gap.h  html.h
src/main/project_hal/: esp32_p_hal.c  esp32_p_hal.h  p_hal.c  p_hal.h
webui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue
webui/src/components/: Edit.vue  Upload.vue
